# crxcavatorpy

./: .gitignore  LICENSE  crxcavator.py  pipeline.yaml  pyproject.toml  requirements.txt
.github/workflows/: python-ci.yml  release.yml
crxcavator/: __init__.py  __main__.py  api.py
docs/: all-reports-output.json  report-output.json
tests/: test_api.py
