[tool.poetry]
name = "crxcavator"
version = "0.1.0"
description = "Python module for interacting with the Crxcavator api"
authors = ["Garrett Primm <garrett.primm@abbvie.com>"]
readme = "README.md"
packages = [
    { include = "crxcavator" }
]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.30.0"
argparse = "^1.4.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
pytest-mock = "^3.10.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
